--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib
-numpy
-openai
-Pillow
-Requests
-spotipy
-streamlit
-Unidecode
+streamlit==1.30.0
+spotipy==2.23.0
+python-dotenv==1.0.0
+requests==2.31.0
+unidecode==1.3.7
+Pillow==10.0.0
+numpy==1.25.2
+matplotlib==3.7.2
